--- a/README.rdoc
+++ b/README.rdoc
@@ -1,19 +1,8 @@
 = noisy
 
-Description goes here.
+Gem to allow easy generation of perlin noise
 
-== Contributing to noisy
- 
-* Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet
-* Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it
-* Fork the project
-* Start a feature/bugfix branch
-* Commit and push until you are happy with your contribution
-* Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
-* Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
+== License
 
-== Copyright
-
-Copyright (c) 2011 Geoffrey Byers. See LICENSE.txt for
-further details.
+Published under the MIT License, see LICENSE.txt for further details.
 
