--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,21 @@
-= noisy
+= Noisy Gem
 
 Gem to allow easy generation of perlin noise
+
+```sh
+gem install noisy
+```
+
+= Usage
+
+```rb
+seed = 1234
+x    = 1
+y    = 2
+
+n = Noisy::Noisy.new(seed)
+v = n.perlin_noise_2d(x, y)
+```
 
 == License
 
